--- a/IPTVPlayer/locale/es/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/es/LC_MESSAGES/IPTVPlayer.po
@@ -906,7 +906,7 @@ msgid "It improves playing of streams hls/m3u8.\n"
 msgstr "Mejora de reproducción de los flujos de hls/m3u8.\n"
 
 msgid "It seems that the host \"%s\" has crashed."
-msgstr "Parece que el host \"% s\" se ha estrellado."
+msgstr "Parece que el host \"%s\" se ha estrellado."
 
 msgid ""
 "It seems that the host \"%s\" has crashed. Do you want to report this "
@@ -1040,7 +1040,7 @@ msgid "Login"
 msgstr "Login"
 
 msgid "Login user \"%s\" into %s"
-msgstr "Iniciar sesión del usuario \"% s\" en% s"
+msgstr "Iniciar sesión del usuario \"%s\" en %s"
 
 msgid "Login:"
 msgstr "Login:"
@@ -1681,7 +1681,7 @@ msgid "Stations"
 msgstr "Estaciones"
 
 msgid "Status object [%r]"
-msgstr "Objeto de estado [%i]"
+msgstr "Objeto de estado [%r]"
 
 msgid "Step [%s] cannot be aborted. Please wait."
 msgstr "Paso [%s] no puede ser interrumpido. Espera."
@@ -1806,21 +1806,21 @@ msgstr ""
 
 msgid "The \"%s\" utility is used by the IPTVPlayer as external movie player."
 msgstr ""
-"La utilidad \"% s\" es utilizada por el IPTVPlayer como reproductor de "
+"La utilidad \"%s\" es utilizada por el IPTVPlayer como reproductor de "
 "películas externas."
 
 msgid ""
 "The \"%s\" utility is used by the IPTVPlayer to buffering and downloading "
 "[%s] links."
 msgstr ""
-"El IPTVPlayer utiliza la utilidad \"% s\" para almacenar en búfer y "
-"descargar enlaces [% s]."
+"El IPTVPlayer utiliza la utilidad \"%s\" para almacenar en búfer y "
+"descargar enlaces [%s]."
 
 msgid ""
 "The \"%s\" utility is used by the IPTVPlayer to determine the encoding of "
 "the text."
 msgstr ""
-"El IPTVPlayer utiliza la utilidad \"% s\" para determinar la codificación "
+"El IPTVPlayer utiliza la utilidad \"%s\" para determinar la codificación "
 "del texto."
 
 msgid "The current host crashed"
@@ -1839,7 +1839,7 @@ msgid "The problem with creating a directory [%s]."
 msgstr "Problema con la creación de un directorio [%s]."
 
 msgid "The problem with obtaining the gateway proxy!"
-msgstr "Problema con la creación de un directorio [%s]!"
+msgstr "Problema con la creación de un directorio!"
 
 msgid ""
 "The problem with the logged-in user \"%s. Check your login details in the "
@@ -1900,7 +1900,7 @@ msgid ""
 "Status[%s], tmpBuffSize[%r], canRunMoviePlayer[%r]"
 msgstr ""
 "Hubo un error de descarga. \n"
-"Estado [%s], tmpBuffSize %[r], canRunMoviePlayer %[r]"
+"Estado [%s], tmpBuffSize [%r], canRunMoviePlayer [%r]"
 
 msgid "There was an error downloading."
 msgstr "Se ha producido un error al descargar."
