--- a/IPTVPlayer/locale/de/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/de/LC_MESSAGES/IPTVPlayer.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 2.0.4\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SearchPath-0: ../plugin\n"
@@ -3609,3 +3609,40 @@ msgstr "Keine abspielbaren Quellen gefunden."
 
 msgid "Sorry. TVPlayer is currently only available in the United Kingdom"
 msgstr "Entschuldigung. TVPlayer ist zur Zeit nur in Großbritannien verfügbar."
+
+msgid "Critical Error – cookie can't be saved!"
+msgstr "Kritischer Fehler - Cookie kann nicht gespeichert werden!"
+
+msgid ""
+"Last error:\n"
+"%s"
+msgstr ""
+"Letzter Fehler:\n"
+"%s"
+
+msgid "Please make sure that the folder for cache data (set in the configuration) is writable."
+msgstr "Bitte stellen Sie sicher, dass das Verzeichnis für Cache-Daten (festgelegt in der Konfiguration) beschreibbar ist."
+
+msgid "Preferred bitrate"
+msgstr "Bevorzugte Bitrate"
+
+msgid "Use preferred bitrate"
+msgstr "Verwende bevorzugte Bitrate"
+
+msgid "Try to bypass DRM (it may be illegal)"
+msgstr "Versuche DRM zu umgehen (könnte illegal sein)"
+
+msgid "Children"
+msgstr "Kinder"
+
+msgid "%s uses \"geo-blocking\" measures to prevent you from accessing the services from outside the Territory."
+msgstr "%s setzt Geoblocking ein, um Sie daran zu hindern diesen Service außerhalb seiner vorgesehenen geographischen Region zu nutzen."
+
+msgid "Bypass geo-blocking for VODs (it may be illegal):"
+msgstr "Umgehe Geoblocking für VOD (könnte illegal sein):"
+
+msgid "Disable/Enable services"
+msgstr "Deaktivieren/Aktivieren von Services"
+
+msgid "The color of the current version"
+msgstr "Farbauswahl für derzeitige Version"
