--- a/IPTVPlayer/locale/pt/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/pt/LC_MESSAGES/IPTVPlayer.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.0.4\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -1223,3 +1223,9 @@ msgstr "A remover ficheiros não necessários."
 
 msgid "Copy post installed binaries."
 msgstr "Copia após binários instalados."
+
+msgid "Enable Reordering mode"
+msgstr "Ativar modo de Ordenação"
+
+msgid "Disable/Enable services"
+msgstr "Desativar/Ativar serviços"
