--- a/IPTVPlayer/locale/pt/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/pt/LC_MESSAGES/IPTVPlayer.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.4\n"
+"X-Generator: Poedit 2.0.6\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -20,6 +20,9 @@ msgstr "Ver materiais de Vídeo de serviços IPTV"
 
 msgid "Configure IPTV Player"
 msgstr "Configurar o IPTV Player"
+
+msgid "IPTV Player - settings"
+msgstr "IPTV Player - definições"
 
 msgid "Enter pin"
 msgstr "Inserir pin"
@@ -1229,3 +1232,30 @@ msgstr "Ativar modo de Ordenação"
 
 msgid "Disable/Enable services"
 msgstr "Desativar/Ativar serviços"
+
+msgid "Disable/Enable groups"
+msgstr "Desativar/Ativar grupos"
+
+msgid "Hide \"%s\" group"
+msgstr "\"%s\" Ocultar Grupos"
+
+msgid "Initialize web interface (experimental)"
+msgstr "Inicializar interface web (experimental)"
+
+msgid "    Enable hosts groups"
+msgstr "    Ativar grupos de hosts"
+
+msgid "Alternative proxy server (1)"
+msgstr "Servidor proxy alternativo (1)"
+
+msgid "Alternative proxy server (2)"
+msgstr "Servidor proxy alternativo (2)"
+
+msgid "Use black iframe at normal video playback finish"
+msgstr "Usar o iframe preto na reprodução de vídeo normal"
+
+msgid "Iframe file"
+msgstr "Arquivo Iframe"
+
+msgid "Black iframe file"
+msgstr "Arquivo preto Iframe"
