sync name in web interface

--- a/IPTVPlayer/Web/locale/es/LC_MESSAGES/IPTVPlayerWebComponent.po
+++ b/IPTVPlayer/Web/locale/es/LC_MESSAGES/IPTVPlayerWebComponent.po
@@ -4,7 +4,7 @@ msgstr ""
 "POT-Creation-Date: 2017-07-12 17:00+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: j00zek <zdzislaw22@windowslive.com>\n"
-"Language-Team: IPTVPlayer\n"
+"Language-Team: E2iPlayer\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,8 +18,8 @@ msgstr ""
 msgid "Redirect"
 msgstr "Redirigir"
 
-msgid "You are using old version of OpenWebif.<br> To go to IPTVPlayer web Select the following link<br>"
-msgstr "Está utilizando una versión antigua de OpenWebif.<br>Para ir a IPTVPlayer web Seleccione el siguiente enlace<br>"
+msgid "You are using old version of OpenWebif.<br> To go to E2iPlayer web Select the following link<br>"
+msgstr "Está utilizando una versión antigua de OpenWebif.<br>Para ir a E2iPlayer web Seleccione el siguiente enlace<br>"
 
 msgid "Click"
 msgstr "Clic"
@@ -70,8 +70,8 @@ msgstr "Debug opción puesta debugfile, pero el archivo no existe - nada para mo
 msgid "Content of the %s file"
 msgstr "Contenido del archivo %s"
 
-msgid "<font color=\"#FE642E\">REMEMBER:</font></b> IPTVPlayer <b>IS ONLY</b> specialized Web browser. It does <b>NOT</b> host any materials!!!</font>"
-msgstr "<font color=\"#FE642E\">REMEMBER:</font></b> IPTVPlayer <b>IS ONLY</b> specialized Web browser. It does <b>NOT</b> host any materials!!!</font>"
+msgid "<font color=\"#FE642E\">REMEMBER:</font></b> E2iPlayer <b>IS ONLY</b> specialized Web browser. It does <b>NOT</b> host any materials!!!</font>"
+msgstr "<font color=\"#FE642E\">REMEMBER:</font></b> E2iPlayer <b>IS ONLY</b> specialized Web browser. It does <b>NOT</b> host any materials!!!</font>"
 
 msgid "Download log file"
 msgstr "Descargar archivo de registro"
