--- a/IPTVPlayer/Web/locale/fa/LC_MESSAGES/IPTVPlayerWebComponent.po
+++ b/IPTVPlayer/Web/locale/fa/LC_MESSAGES/IPTVPlayerWebComponent.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: IPTVPlayerWebComponent\n"
 "POT-Creation-Date: 2017-07-12 17:00+0100\n"
 "PO-Revision-Date: \n"
-"Language-Team: IPTVPlayer\n"
+"Language-Team: E2iPlayer\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,7 +19,7 @@ msgid "Redirect"
 msgstr ""
 
 msgid ""
-"You are using old version of OpenWebif.<br> To go to IPTVPlayer web Select "
+"You are using old version of OpenWebif.<br> To go to E2iPlayer web Select "
 "the following link<br>"
 msgstr ""
 
@@ -74,7 +74,7 @@ msgid "Content of the %s file"
 msgstr ""
 
 msgid ""
-"<font color=\"#FE642E\">REMEMBER:</font></b> IPTVPlayer <b>IS ONLY</b> "
+"<font color=\"#FE642E\">REMEMBER:</font></b> E2iPlayer <b>IS ONLY</b> "
 "specialized Web browser. It does <b>NOT</b> host any materials!!!</font>"
 msgstr ""
 
