--- a/IPTVPlayer/Web/locale/ru/LC_MESSAGES/IPTVPlayerWebComponent.po
+++ b/IPTVPlayer/Web/locale/ru/LC_MESSAGES/IPTVPlayerWebComponent.po
@@ -4,7 +4,7 @@ msgstr ""
 "POT-Creation-Date: 2013-12-15 12:19+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: krutoj2010 <krutoj2010@gmail.com>\n"
-"Language-Team: IPTVPlayer\n"
+"Language-Team: E2iPlayer\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,11 +20,11 @@ msgid "Redirect"
 msgstr "Переадресовывать"
 
 msgid ""
-"You are using old version of OpenWebif.<br> To go to IPTVPlayer web Select "
+"You are using old version of OpenWebif.<br> To go to E2iPlayer web Select "
 "the following link<br>"
 msgstr ""
 "Вы используете старую версию OpenWebif.<br>Чтобы перейти на веб-сайт "
-"IPTVPlayer Выберите следующую ссылку<br>"
+"E2iPlayer Выберите следующую ссылку<br>"
 
 msgid "Click"
 msgstr "Нажмите"
@@ -79,10 +79,10 @@ msgid "Content of the %s file"
 msgstr "Содержимое файла %s"
 
 msgid ""
-"<font color=\"#FE642E\">REMEMBER:</font></b> IPTVPlayer <b>IS ONLY</b> "
+"<font color=\"#FE642E\">REMEMBER:</font></b> E2iPlayer <b>IS ONLY</b> "
 "specialized Web browser. It does <b>NOT</b> host any materials!!!</font>"
 msgstr ""
-"<font color=\"#FE642E\">ЗАПОМНИТЕ:</font></b> IPTVПлеер <b>ТОЛЬКО</b> "
+"<font color=\"#FE642E\">ЗАПОМНИТЕ:</font></b> E2iПлеер <b>ТОЛЬКО</b> "
 "специализированный Веб-браузер. Он <b>НЕ</b> содержит никаких материалов !!!"
 "</font>"
 
