--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,5 +1,7 @@
-﻿#2019.07.23.02
-Filiser.TV javítva
+﻿#2019.07.23.03
+-Új host: SportItalia hozzáadva
+#2019.07.23.02
+-Filiser.TV javítva
 #2019.07.23.01
 -XXX kiegészítő frissítve
 #2019.07.21.01
