--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,11 @@
-﻿#2019.08.06.01
+﻿#2019.08.07.01
+-Openload linkek támogatása javítva
+#2019.08.06.02
+-Kisebb fejlesztések, javítások
+-Új funkció:  Vissza a Kategória lista elejéhez, ha több oldal volt megnézve
+-Új funkció:  Vissza a kiszolgáló kiindulási pontjához (gyors visszalépés az adott hoston belül)
+-Magyaros dátumkijelzés
+#2019.08.06.01
 -HU telepítő frissítve
 #2019.08.03.03
 -HU telepítő frissítve
