--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.08.07.01
+﻿#2019.08.13.01
+-HU Telepítő frissítve
+-WebHU Player frissítve
+#2019.08.07.01
 -Openload linkek támogatása javítva
 #2019.08.06.02
 -Kisebb fejlesztések, javítások
