Felnőtt kiegészítő frissítve

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,5 +1,7 @@
 ﻿#2019.08.13.02
 -TSiPlayer frissítve
+#2019.08.14.01
+-Felnőtt kiegészítő frissítve
 #2019.08.13.01
 -HU Telepítő frissítve
 -WebHU Player frissítve
